# media-library-dashboard

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
.streamlit/: secrets.toml.example
blog/: welcome-to-the-cabinet.md
data/: inventory.json  missing_albums.json  movies.csv  musicbrainz_artwork.json  plex_music.csv  tmdb_cache.json
scripts/: install_nightly_task.ps1  nightly_sync.ps1
src/music_library/: __init__.py  blog.py  catalog.py  cli.py  cover_art.py  plex_export.py  scanner.py  storage.py  sync.py  sync_health.py  tagger.py
tests/: test_blog.py  test_cover_art.py  test_scanner.py  test_sync_health.py
