[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "music-library-manager"
version = "0.1.0"
description = "Tag, inventory, and catalog a local WAV music library."
requires-python = ">=3.10"
dependencies = [
  "mutagen>=1.47,<2",
  "requests>=2.31,<3",
  "streamlit>=1.36,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
music-library = "music_library.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
