[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "media-library-dashboard"
version = "0.1.0"
description = "Sync and publish a private Plex movie and music collection dashboard."
requires-python = ">=3.10"
dependencies = [
  "mutagen>=1.47,<2",
  "requests>=2.31,<3",
  "streamlit>=1.36,<2",
  "pandas>=2.2,<3",
  "plexapi>=4.17,<5",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
music-library = "music_library.cli:main"
media-library-sync = "music_library.sync:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
